tree-sitter-kama/grammar.js
    source_file: ($) =>
      seq(
        optional($.file_gate),
        optional($.import_declaration),
        optional($.export_manifest),
        repeat($._top_level_declaration),
      ),

    // THE FILE GATE — `file @compileFor(!ARCH_WASM32);`, kama.y's `file_directive_opt`. A unit's FIRST
    // line, ahead of `import`, gating the whole file the way `@compileFor` gates one declaration.
    // Leading `file` rather than attribute-first because at THIS position the attribute-first spelling
    // costs the compiler's grammar two conflicts (the deciding token sits past the whole attribute list);
    // one token of lookahead is what makes it free here too.
    //
    // The payload is a plain `attribute_list`, exactly as in kama.y — restricting it to `@compileFor` is
    // the compiler's job, so a file gate carrying `@noheap` PARSES here and is rejected there. That
    // asymmetry is deliberate and matches how every other semantic rule is split.
    _top_level_declaration: ($) =>
      choice(
        $.function_declaration,
        $.extern_declaration,
        $.extern_const_declaration,
        $.fnptr_declaration,
        $.type_declaration,
        $.adapter_declaration,
        $.enum_declaration,
        $.module_variable_declaration,
        $.comptime_assert_statement,
      ),

    // ── Type declarations ───────────────────────────────────────────────────────────────────────────
    // kama.y:248. `type <modifiers> <kind> Name ...` where <kind> is an ORDINARY IDENTIFIER. See the
    // header note; `type_kind` exists so a query never has to rely on pattern ordering to colour it.
    function_declaration: ($) =>
      seq(
        optional($.attribute_list),
        optional($.function_modifier),
        optional('unsafe'),
        optional('comptime'),
        'fn',
        field('return_type', $._function_return_type),
        field('name', $.identifier),
        optional($.type_parameters),
        field('parameters', $.parameter_list),
        // A function's compile-time values are its LAST list — after the runtime one.
        optional($.comptime_parameters),
        field('body', $.block),
      ),

    // `expose` only — free functions. NOT part of the member `modifier` set.
    _function_return_type: ($) =>
      choice($._type, $.void_type, $.reference_return_type),

    void_type: ($) => 'void',
    // kama.y — `ref T` (a writable place) or `const ref T` (a read-only place); the const comes first,
    // matching the parameter spelling `const ref T x`.
    parameter_list: ($) => seq('(', commaSep($.parameter), ')'),

    // kama.y:384 — no default values, no varargs.
    _type: ($) => choice($.primitive_type, $.type_name),

    primitive_type: ($) => choice(...PRIMITIVE_TYPES),

    block: ($) => seq('{', repeat($._statement), '}'),

    _statement: ($) =>
      choice(
        $.local_variable_declaration,
        $.local_constant_declaration,
        $.block,
        $.empty_statement,
        $.expression_statement,
        $.if_statement,
        $.while_statement,
        $.do_statement,
        $.for_statement,
        $.foreach_statement,
        $.break_statement,
        $.continue_statement,
        $.return_statement,
        $.arm_value_statement,
        $.unsafe_statement,
        $.spawn_statement,
        $.scope_statement,
        $.borrow_statement,
        $.parallel_for_statement,
        $.parallel_spawn_statement,
        $.asm_statement,
        $.comptime_assert_statement,
      ),

    // C-style: `int32 i = 0, j;`. There is no `let`/`var`.
    // `slot T x;` — a declared HOLE (no value yet, no destructor until assigned). A leading keyword,
    // like `const`/`comptime` below.
    local_variable_declaration: ($) =>
      seq(
        optional('slot'),
        field('type', $._type),
        commaSep1($.variable_declarator),
        ';',
      ),

    variable_declarator: ($) =>
      seq(
        field('name', $._name),
        optional(seq('=', field('value', $._variable_initializer))),
      ),

    // `Isolate h = spawn worker(p: give x);` — the handle form. `spawn` is an initializer only here.
    _variable_initializer: ($) => choice($._expression, $.spawn_expression),

    integer_literal: ($) =>
      token(
        seq(
          choice(
            /0[xX][0-9A-Fa-f]+(_[0-9A-Fa-f]+)*/,
            /0[oO][0-7]+(_[0-7]+)*/,
            /0[bB][0-9A-Za-z]+(_[0-9A-Za-z]+)*_([1-2][0-9]|[3][0-2]|[2-9])/,
            /0|[1-9][0-9]*(_[0-9]+)*/,
          ),
          optional(/u?i(8|16|32|64)/),
        ),
      ),

    // kama.l:91-94. A dot needs digits on BOTH sides (`1.` and `.5` are rejected); a dotless form needs an
    // exponent (`1e10` is accepted). Suffixes are only `f32`/`f64`.
    float_literal: ($) =>
      token(
        seq(
          choice(/[0-9]+(_[0-9]+)*\.[0-9]+(_[0-9]+)*([eE][+-]?[0-9]+)?/, /[0-9]+(_[0-9]+)*[eE][+-]?[0-9]+/),
          optional(/f(32|64)/),
        ),
      ),

    // kama.l:96-107. tree-sitter regexes match CODE POINTS, not bytes, so `[^\\']` covers both the plain
    // single-byte form and the multibyte one (`'e'`, emoji) — and rejects `'abc'` and `''` for free.
    char_literal: ($) =>
      token(
        seq(
          "'",
          choice(/[^\\']/, /\\['"\\0abfnrtv$]/, /\\u\{[0-9A-Fa-f]{1,6}\}/),
          "'",
        ),
      ),

    // A regular string. Every piece is `token.immediate` so tree-sitter does not skip `extras` (i.e. eat
    // the whitespace) inside the literal.
    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $.string_content,
            $.escape_sequence,
            $.interpolation,
            $._lone_dollar,
          ),
        ),
        token.immediate('"'),
      ),

    // kama.l `single_string_char` is `[^\\"]`, which INCLUDES newline — a plain "..." may legally span
    // lines — and includes `$`. `$` is excluded here only so that `${` can win by longest match below,
    // exactly as it does in flex; a lone `$` comes back via `_lone_dollar`.
    string_content: ($) => token.immediate(prec(1, /[^"\\$]+/)),

    // The escape set is EXACTLY kama.l's. Anything else (`\e`, `\x41`, `\q`) is a lexical error in the
    // compiler, so it must fail to parse here too — that is what makes tests/syntax/bad.kama meaningful.
    escape_sequence: ($) =>
      token.immediate(choice(/\\['"\\0abfnrtv$]/, /\\u\{[0-9A-Fa-f]{1,6}\}/)),

    _lone_dollar: ($) => token.immediate('$'),

    // tree-sitter regexes are DFAs with no lookahead, so "a `$` not followed by `{`" is unwritable. It does
    // not need to be: both `$` and `${` are valid here and maximal munch picks `${`.
    interpolation: ($) =>
      seq(
        token.immediate('${'),
        $.interpolation_expression,
        optional(seq(':', $.format_spec)),
        '}',
      ),

    // RESTRICTED to an identifier — or `this` (KR-81) — with `.field` / `[index]` accessors. No operators,
    // no calls: kama.l errors on anything else, and tests/xfail/interp_hole_operator.kama is one of the
    // files the whole-corpus oracle requires to fail. Whitespace inside the hole IS ignored (kama.l:341).
    // `this` is the ONE keyword admitted as a head — the lexer already returns THIS from the hole state,
    // and src/kama.y's `interp_hole` takes it; see tests/interp_this.kama.
    interpolation_expression: ($) =>
      seq(
        choice($._binding_name, $.this_expression),
        repeat(
          choice(
            seq('.', $._binding_name),
            seq('[', choice($._binding_name, $.integer_literal), ']'),
          ),
        ),
      ),

    format_spec: ($) => token.immediate(/[-+.0-9A-Za-z]+/),

    // `@"..."` — spans newlines, `""` is the ONLY escape, no interpolation and no backslash escapes.
    // Both `""` and `"` are valid at the closing position; longest match takes `""`, exactly as flex does.
    // This is the tie the TextMate grammar got wrong (its defect #2).
    verbatim_string_literal: ($) =>
      seq(
        '@"',
        repeat(choice($.verbatim_content, $.quote_escape)),
        token.immediate('"'),
      ),

    verbatim_content: ($) => token.immediate(prec(1, /[^"]+/)),
    quote_escape: ($) => token.immediate('""'),

    // `html"..."` / `sql"..."` — an identifier IMMEDIATELY adjacent to the opening quote. `foo "x"` with a
    // space is NOT a tag, which is why the quote is `token.immediate`.
    tagged_string_literal: ($) =>
      seq(
        field('tag', $.string_tag),
        field('body', choice($._immediate_string, $._immediate_verbatim)),
      ),

    string_tag: ($) => $.identifier,

    _immediate_string: ($) =>
      seq(
        token.immediate('"'),
        repeat(
          choice(
            $.string_content,
            $.escape_sequence,
            $.interpolation,
            $._lone_dollar,
          ),
        ),
        token.immediate('"'),
      ),

    _immediate_verbatim: ($) =>
      seq(
        token.immediate('@"'),
        repeat(choice($.verbatim_content, $.quote_escape)),
        token.immediate('"'),
      ),

    // ── Lexical ─────────────────────────────────────────────────────────────────────────────────────
    // kama.l:119-121 — ASCII only, no `$`, no Unicode identifiers. A bare `_` is a valid identifier, which
    // is how the match wildcard `case _:` parses.
    identifier: ($) => /[A-Za-z_][A-Za-z0-9_]*/,

    // `slot` is a CONTEXTUAL keyword in the compiler (kama.y): it names any binding — a field, a local, a
    // parameter, an argument label, a member — and leads a declaration only where a declaration can begin.
    // `word: $.identifier` promotes every literal string to a keyword token, so without this the word could
    // only ever be the keyword and `isize slot = 1;` was an ERROR node here while the compiler accepted it.
    // ALIASED to `identifier` on purpose: every node type, query and highlight stays exactly as it was, so
    // this is invisible to anything downstream. (`copy`/`give`/`truncate` need no alias: the grammar holds no
    // literal for them, so they lex as identifiers wherever src/scanner.c does not claim the keyword — KB-35.)
    _name: ($) => choice($.identifier, $._slot_name, $._file_name),
    // A `match` label, a `match` binding and a `foreach` binding take every contextual word, as a declarator does
    // (KB-35) — `copy`/`give`/`truncate` arrive as identifiers already (see `externals`).
    _binding_name: ($) => choice($._name, alias('type', $.identifier)),
